--- a/operations-ui/src/App.css
+++ b/operations-ui/src/App.css
@@ -22,6 +22,11 @@
   color: #61dafb;
 }
 
+#content {
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
