--- a/operations-ui/src/App.css
+++ b/operations-ui/src/App.css
@@ -27,6 +27,11 @@
   margin-right: 20px;
 }
 
+html {
+  font-weight: normal;
+  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
