--- a/operations-ui/src/static/index.scss
+++ b/operations-ui/src/static/index.scss
@@ -1,57 +1,93 @@
+@import "./partials/variables";
+@import "./partials/mixins";
+
 /* CSS for Operations UI application. */
 
 // *****************************************************************************
 // Global
 // *****************************************************************************
 
-#content {
-  margin-left: 20px;
-  margin-right: 20px;
-}
-
 html {
   font-weight: normal;
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-  "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-  sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-size: 150px, auto;
+  background-color: #fff;
+  color: $base-text;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-  monospace;
+ul.link-list {
+  list-style-type: none;
+  padding-left: 0px;
 }
 
-// *****************************************************************************
-// Header
-// *****************************************************************************
-
-.component-header {
-  padding: 15px;
-  position: relative;
-  font-size: 32px;
-  text-align: center;
-  color: #333;
+h1, h2 {
+  font-weight: 700;
 }
 
 // *****************************************************************************
+// NavigationBar
+// *****************************************************************************
+
+.navbar-inverse {
+  margin-bottom: 0px;
+  background-color: $mira-purple-dark;
+  .navbar-header {
+    img.mirantis-logo {
+      padding: 3px;
+      position: relative;
+      top: -15px;
+      width: 140px;
+    }
+    h1 {
+      display: inline-block;
+      padding-left: 30px;
+      color: $gray-lighter;
+    }
+  }
+
+}
+
+// *****************************************************************************
+//
+// Templates Table
+//
+// *****************************************************************************
+
+.content {
+  margin-left: 50px;
+  margin-right: 50px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.page-header {
+margin-bottom: 30px;
+}
+
+.btn-primary{
+  color: $gray-lighter;
+  background-color: $brand-primary;
+  border-color: $brand-primary;
+  &:hover {
+    background-color: darken($brand-primary, 10%);
+    border-color:  darken($brand-primary, 10%);
+  }
+}
+.btn-outline-primary {
+ @include bootstrap-btn($brand-primary, #fff,  $brand-primary, 'primary')
+}
+
+
+.btn-success {
+ @include bootstrap-btn($gray-lighter, $mira-teal,  $mira-teal, 'success')
+}
+// *****************************************************************************
+//
 // Reclass Model Wizard
+//
 // *****************************************************************************
 
 ol.progtrckr {
@@ -61,23 +97,23 @@ ol.progtrckr {
   em {
     display: none;
     font-weight: 700;
-    padding-left: 1rem;
+    padding-left: 16px;
   }
   li {
     display: inline-block;
     text-align: center;
-    line-height: 4.5rem;
+    line-height: 75px;
     ///// Comment until enable movement between steps /////
     //cursor: pointer;
     span {
-      padding: 0 1.5rem;
+      padding: 0 24px;
     }
     &:after {
       content: "\00a0\00a0";
     }
     &:before {
       position: relative;
-      bottom: -3.7rem;
+      bottom: -60px;
       float: left;
       left: 50%;
     }
@@ -105,9 +141,9 @@ ol.progtrckr {
       content: "\2022";
       color: white;
       background-color: #CCCCCC;
-      width: 1.2em;
-      line-height: 1.2em;
-      border-radius: 1.2em;
+      width: 20px;
+      line-height: 20px;
+      border-radius: 20px;
     }
     ///// Comment until enable movement between steps /////
     //&:hover:before {
@@ -116,21 +152,26 @@ ol.progtrckr {
   }
   li.progtrckr-done {
     color: black;
-    border-bottom: 4px solid #5cb85c;
+    border-bottom: 4px solid $mira-teal;
     &:before {
       content: "\2713";
       color: white;
-      background-color: #5cb85c !important;
-      width: 1.2em;
-      line-height: 1.2em;
-      border-radius: 1.2em;
+      background-color: $mira-teal !important;
+      width: 20px;
+      line-height: 20px;
+      border-radius: 20px;
     }
     ///// Comment until enable movement between steps /////
     //&:hover:before {
     //  color: #333;
     //}
   }
+}
 
+.help-message {
+  pointer-events: auto !important;
+  border-radius: 4px !important;
+  max-width: 400px;
 }
 
 @media (max-width: 650px) {
@@ -146,14 +187,14 @@ ol.progtrckr {
 }
 
 .form-check {
-  margin-bottom: 1rem;
+  margin-bottom: 16px;
 }
 
 .footer-buttons {
   margin-top: 20px;
   text-align: center;
 
-  .btn-outline-info {
+  .btn-outline-primary {
     margin-right: 15px;
     margin-bottom: 15px;
   }
@@ -167,8 +208,12 @@ ol.progtrckr {
     font-weight: 800;
     color: #404040;
     font-size: 15px;
+    .help-icon {
+      margin-left: 4px;
+      position: relative;
+      top: -2px;
+    }
   }
-
   input {
     color: #545454;
   }
@@ -185,9 +230,9 @@ ol.progtrckr {
   margin-left: auto;
   margin-right: auto;
   width: 70%;
-  border-radius: 0.3rem;
+  border-radius: 6px;
   p {
-    font-size: 1.3rem;
-    color: #28a745;
+    font-size: 21px;
+    color: #00b894;
   }
 }
