Hide loading icon depending on state
Now icon h=is hidden after 5 minutes, later we should get status from the API

--- a/src/static/index.scss
+++ b/src/static/index.scss
@@ -244,9 +244,12 @@ ol.progtrckr {
   }
 }
 
+.tooltip-box {
+   border-radius: 4px !important;
+}
+
 .help-message {
   pointer-events: auto !important;
-  border-radius: 4px !important;
   max-width: 400px;
 }
 
