--- a/src/static/partials/_variables.scss
+++ b/src/static/partials/_variables.scss
@@ -22,10 +22,12 @@ $mira-dark-teal:         #126666;
 $mira-gray-dark:         #666;
 $mira-gray-neutral:      #B2BEC3;
 $mira-gray-cool:         #E6EFED;
+$mira-white:             #FFF;
 
 $gray:                   $mira-gray-dark;
 $gray-light:             $mira-gray-neutral;
 $gray-lighter:           $mira-gray-cool;
+$white:                  $mira-white;
 
 $brand-primary:          $mira-purple-dark;
 $brand-success:          $mira-teal;
