--- a/src/static/index.scss
+++ b/src/static/index.scss
@@ -187,7 +187,7 @@ h1, h2 {
       display: inline-block;
       padding-left: 20px;
       color: $gray-lighter;
-      font-size: 35px;;
+      font-size: 35px;
     }
   }
 
